Discount system completed

--- a/association_rule_mining/associate_rule_mining.ipynb
+++ b/association_rule_mining/associate_rule_mining.ipynb
@@ -12110,6 +12110,26 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Index(['support', 'itemsets', 'length'], dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frequent_items.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -12138,7 +12158,7 @@
        "    <tr>\n",
        "      <th>749</th>\n",
        "      <td>0.001470</td>\n",
-       "      <td>(yogurt, sausage, whole milk)</td>\n",
+       "      <td>(whole milk, sausage, yogurt)</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -12150,19 +12170,19 @@
        "    <tr>\n",
        "      <th>742</th>\n",
        "      <td>0.001203</td>\n",
-       "      <td>(whole milk, rolls/buns, other vegetables)</td>\n",
+       "      <td>(whole milk, other vegetables, rolls/buns)</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>743</th>\n",
        "      <td>0.001136</td>\n",
-       "      <td>(soda, whole milk, other vegetables)</td>\n",
+       "      <td>(whole milk, other vegetables, soda)</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>744</th>\n",
        "      <td>0.001136</td>\n",
-       "      <td>(yogurt, whole milk, other vegetables)</td>\n",
+       "      <td>(whole milk, other vegetables, yogurt)</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -12208,11 +12228,11 @@
       ],
       "text/plain": [
        "      support                                    itemsets  length\n",
-       "749  0.001470               (yogurt, sausage, whole milk)       3\n",
+       "749  0.001470               (whole milk, sausage, yogurt)       3\n",
        "745  0.001136           (whole milk, sausage, rolls/buns)       3\n",
-       "742  0.001203  (whole milk, rolls/buns, other vegetables)       3\n",
-       "743  0.001136        (soda, whole milk, other vegetables)       3\n",
-       "744  0.001136      (yogurt, whole milk, other vegetables)       3\n",
+       "742  0.001203  (whole milk, other vegetables, rolls/buns)       3\n",
+       "743  0.001136        (whole milk, other vegetables, soda)       3\n",
+       "744  0.001136      (whole milk, other vegetables, yogurt)       3\n",
        "..        ...                                         ...     ...\n",
        "100  0.007819                                (pot plants)       1\n",
        "99   0.037091                                      (pork)       1\n",
@@ -12223,7 +12243,7 @@
        "[750 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12246,7 +12266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -12362,7 +12382,7 @@
        "4            0.110005  0.001804    0.084375  0.767013 -0.000548    0.972009  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
